[package]
name = "ex-drbt"
version = "0.1.0"
authors = ["Uriel Scott <uriel.scott@protonmail.com>"]
edition = "2018"
description = "Rust client for deribit"
license = "MIT"
repository = "https://github.com/uscott/rs-deribit"
readme = "README.md"
categories = ["api-bindings"]

[badges]
travis-ci = { repository = "uscott/rs-deribit", branch = "master" }

[dependencies]
futures = { version = "0.3", features = ["async-await"] }
tokio = { version = "0.3.6", features = ["time", "macros"] }
tungstenite = "0.11"
tokio-tungstenite = { version = "0.12.0", features = ["tls"]}
url = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.60"
log = "0.4"
derive_builder = "0.9"
pin-project = "1.0.2"
shrinkwraprs = "0.3"
regex = "1"
lazy_static = "1"

fehler = "1"
thiserror = "1"
failure = "0.1"
# anyhow = "1"

[dev-dependencies]
env_logger = "0.8.2"
dotenv = "0.15"
